welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:2: error: not found: value Direction
  setDirection(Direction.EST)
               ^DwarfCode:6: error: not found: value prendbiscuit
  prendbiscuit()
  ^DwarfCode:7: error: not found: value Direction
  setDirection(Direction.OUEST)
               ^DwarfCode:12: error: not found: value Direction
  setDirection(Direction.EST)
               ^DwarfCode:17: error: not found: value estFacemur
  if (estFacemur())
      ^DwarfCode:26: error: not found: value Direction
setDirection(Direction.SUD)
             ^DwarfCode:28: error: not found: value Direction
setDirection(Direction.OUEST)
             ^